# Soundwave

./: .gitignore  Soundwave.sln  compose.yaml  docker-compose.prod.yml  docker-compose.yml
Soundwave.Api/: Dockerfile  Program.cs  Soundwave.Api.csproj  Soundwave.Api.http
Soundwave.Api/Controllers/: AdminController.cs  AlbumsController.cs  ArtistController.cs  AuthController.cs  BaseApiController.cs  InternalController.cs  LikesController.cs  ListenHistoryController.cs  PlaylistsController.cs  RecognizeController.cs  ReleasesController.cs  SearchController.cs  TracksController.cs
Soundwave.Api/DTOs/: Artist.cs  Auth.cs  History.cs  Likes.cs  PaginatedResult.cs  Playlist.cs  Recognize.cs  Release.cs  Search.cs  Track.cs
Soundwave.Api/Data/: AppDbContext.cs
Soundwave.Api/Entities/: Album.cs  ListenEvent.cs  Playlist.cs  RefreshToken.cs  Release.cs  ReleaseTrack.cs  (+3 more)
nginx/: nginx.conf
soundwave.client/: .prettierrc  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
soundwave.ml/: .env.example  DOTNET_CHANGES.cs  Dockerfile  README.md  docker-compose.yml  gitignore  pyproject.toml
soundwave.ml/app/: config.py  deps.py  main.py
soundwave.ml/app/api/: health.py  recognize.py  similar.py  tracks.py
soundwave.ml/app/domain/: callback.py  worker.py
soundwave.ml/app/domain/audio/: loader.py
soundwave.ml/app/domain/embedding/: inference.py  model.py
soundwave.ml/app/domain/fingerprint/: core.py  matcher.py
soundwave.ml/app/domain/storage/: db.py  vector_store.py
soundwave.ml/cli/: bulk_index.py
(+197 files in other folders)
